<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NewRecipe">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recipeNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_name" />

            <EditText
                android:id="@+id/recipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/recipeInstructionsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions" />

            <EditText
                android:id="@+id/recipeInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:lines="3" />

            <TextView
                android:id="@+id/recipeIngredientsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients_list" />

            <EditText
                android:id="@+id/recipeIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <RatingBar
                android:id="@+id/recipeRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1" />

            <Button
                android:id="@+id/recipeEnterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>